add video popup

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "libs/slick/slick";
 @import "libs/slick/slick-theme";
 @import "libs/lightbox/lightbox";
+@import "libs/modal-video/modal-video";
 
 
 @import 'fonts';
