--- a/sass/_popup.scss
+++ b/sass/_popup.scss
@@ -59,4 +59,9 @@
             object-fit: contain;
         }
     }
+    &_video {
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
