--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -358,4 +358,8 @@
         padding-left: 30px;
         padding-right: 30px;
     }
+    .lb-outerContainer {
+        width: 90%!important;
+        max-width: 90%!important;
+    }
 }
