--- a/sass/_popup.scss
+++ b/sass/_popup.scss
@@ -65,3 +65,14 @@
         }
     }
 }
+
+.lb-outerContainer {
+    width: auto!important;
+    max-width: 80%!important;
+    height: auto;
+}
+
+.lb-image {
+    width: 100%!important;
+    height: auto!important;
+}
