--- a/css/main.css
+++ b/css/main.css
@@ -4016,7 +4016,8 @@ a {
     font-family: "Montserrat";
     font-size: 20px;
     font-weight: 600;
-    line-height: 18px; }
+    line-height: 18px;
+    -webkit-appearance: none; }
   .contacts__city {
     color: #717377;
     font-family: "Montserrat";
@@ -4659,9 +4660,11 @@ a {
   .contacts {
     display: flex;
     flex-direction: column; }
+    .contacts__el {
+      margin-bottom: 3px; }
 
   .location {
-    height: 490px;
+    height: 475px;
     background-position-y: 70px; }
     .location_title .first span {
       font-size: 35px !important; }
@@ -4727,6 +4730,9 @@ a {
 
   .lb-outerContainer {
     width: 90% !important;
-    max-width: 90% !important; } }
+    max-width: 90% !important; }
+
+  .header .contacts__number {
+    font-size: 14px; } }
 
 /*# sourceMappingURL=main.css.map */
