--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -14,6 +14,7 @@
         font-size: 20px;
         font-weight: 600;
         line-height: 18px;
+        -webkit-appearance: none; 
     }
     &__city {
         color: #717377;
