--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,30 @@ body {
 }
 
 .parallax {
-    background: #000 url(../img/parallax.jpg) no-repeat center center / cover;
-    background-attachment: fixed
+    position: relative;
+    width: 100%;
+}
+
+.parallax__wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.parallax__bg {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    transform: translateZ(0);
+    will-change: transform;
 }
 
 .advantages {
