--- a/css/main.css
+++ b/css/main.css
@@ -9420,8 +9420,8 @@ a, a:hover, a:focus {
     margin-bottom: 40px; }
   .catalog__img {
     position: relative; }
-    .catalog__img:hover-h {
-      display: block; }
+    .catalog__img:hover .catalog__img-h {
+      opacity: 1; }
     .catalog__img-h {
       position: absolute;
       left: 0;
@@ -9430,7 +9430,7 @@ a, a:hover, a:focus {
          object-fit: cover;
       width: 100%;
       height: 100%;
-      display: none; }
+      opacity: 0; }
   .catalog__category {
     display: block;
     margin-bottom: 10px;
