--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -10,8 +10,8 @@
     &__img {
         position: relative;
         &:hover {
-            &-h {
-                display: block;
+            .catalog__img-h {
+                opacity: 1;
             }
         }
         &-h {
@@ -21,7 +21,7 @@
             object-fit: cover;
             width: 100%;
             height: 100%;
-            display: none;
+            opacity: 0;
         }
     }
     &__category {
