--- a/css/all.css
+++ b/css/all.css
@@ -463,7 +463,7 @@ html,body {
     max-height: 100%;
 }
 .promo .holder-img img {
-    height: 100%;
+    /*height: 100%; */
     width: auto;
 }
 .promo .holder-text{
@@ -727,7 +727,7 @@ html,body {
     overflow: hidden;
     border: 1px solid #ffffff;
     padding: 12px;
-    width: 125px;
+    width: 115px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -786,8 +786,8 @@ html,body {
     overflow: hidden;
     border: 1px solid #ffffff;
     padding: 12px;
-    width: 125px;
-    height: 125px;
+    width: 115px;
+    height: 115px;
     background: #000;
     color: #7dab43;
     font-size: 14px;
@@ -924,7 +924,7 @@ html,body {
     text-align: center;
 }
 .secondary-flex .holder-img img{
-    height: 100%;
+    /*height: 100%; */
 }
 
 .secondary-flex .holder-img:before{
@@ -944,9 +944,13 @@ html,body {
 .video-block{
     margin: 10px 0 105px;
 }
+.video-block .group {
+    display: flex;
+    justify-content: space-between;
+}
 .video-block .video{
+    width: 45%;
     float: left;
-    width: 50%;
 }
 .video{
     width: 100%;
@@ -1647,7 +1651,6 @@ html,body {
     .secondary-flex .holder-text {
         flex: 0 0 100%;
         width: 100%;
-        min-height: 700px;
         padding: 30px 0 10px;
     }
     .secondary-flex .holder-img {
@@ -1685,6 +1688,12 @@ html,body {
 @media screen and (max-width: 767px){
     .container {
         max-width: 280px;
+    }
+    .video-block .group {
+        flex-direction: column;
+    }
+    .video-block .video {
+        width: 100%;
     }
     .slider-product .price {
         align-items: center;
@@ -1839,7 +1848,7 @@ html,body {
         display: block;
     }
     .promo .holder-img {
-        height: 85vh;
+        height: auto;
         max-width: 360px;
         width: 100%;
         margin: 0 auto 30px;
