--- a/css/all.css
+++ b/css/all.css
@@ -993,14 +993,13 @@ html,body {
 .list-models li{
     display: inline-block;
     vertical-align: top;
-    margin: 0 0 59px;
-    width: 50%;
+    width: 33.33%;
     text-align: center;
     font-weight: 300;
     font-size: 28px;
     line-height: 1;
     color: #000000;
-    padding: 0 30px;
+    /*padding: 0 30px; */
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -1009,10 +1008,16 @@ html,body {
     background: #ffffff;
     overflow: hidden;
     height: 100%;
+    min-height: 600px;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 90% 100%;
+    border: 1px solid #ccc;
     padding: 7%;
-    border-radius: 48px;
-    -webkit-border-radius: 48px;
-    -moz-border-radius: 48px;
+    border-radius: 0; /*48 */
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
