--- a/css/all.css
+++ b/css/all.css
@@ -993,7 +993,7 @@ html,body {
 .list-models li{
     display: inline-block;
     vertical-align: top;
-    width: 33.33%;
+    width: 100%;
     text-align: center;
     font-weight: 300;
     font-size: 28px;
@@ -1007,20 +1007,21 @@ html,body {
 .list-models .holder-block{
     background: #ffffff;
     overflow: hidden;
-    height: 100%;
-    min-height: 600px;
     background-color: #fff;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 90% 100%;
     border: 1px solid #ccc;
-    padding: 7%;
     border-radius: 0; /*48 */
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.list-models .holder-block img {
+    width: 100%;
+    height: auto;
 }
 .list-models .holder-img{
     text-align: center;
