--- a/css/all.css
+++ b/css/all.css
@@ -988,10 +988,14 @@ html,body {
     bottom: 0;
     top: auto;
 }
+.models-wrap {
+    background-color: #fff;
+}
 .models{
     padding: 77px 0 45px;
 }
 .models h3{
+    color: #000;
     text-align: center;
     font-weight: 300;
     margin: 0 0 76px;
